<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidro_filter</name>
  <version>0.0.1</version>
  <description>
    ROS device filter driver for lidro 3D LIDARs.
  </description>
  <maintainer email="buttonfly@gmail.com">Bryce Ghim</maintainer>

  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/lidro_driver</url>
  <url type="repository">https://github.com/ros-drivers/lidro</url>
  <url type="bugtracker">https://github.com/ros-drivers/lidro/issues</url>

  <author>Sungmin Kim</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_ros</depend>
  <depend>lidro_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>


  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
